--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.5.2
+dj-database-url==1.0.0
 Django==4.1.2
+gunicorn==20.1.0
 mysqlclient==2.1.1
 Pillow==9.2.0
+psycopg2==2.9.5
 sqlparse==0.4.3
 tzdata==2022.5
